# RDK_X5

./: .gitignore  COMPETITION_DOC.md  MOVEIT_README.md  PORTING_GUIDE.md  README.md  REPLICATION_GUIDE.md  camera.sh  frames_2026-04-21_22.14.29.gv  run_moveit_assistant.sh  run_moveit_assistant_enhanced.sh  run_moveit_final.sh  run_moveit_virtualbox.sh  start_robot.sh
.claude/: settings.json  settings.local.json
111.SLDASM/: CMakeLists.txt  package.xml
111.SLDASM/config/: joint_names_111.SLDASM.yaml
111.SLDASM/launch/: display.launch  gazebo.launch
111.SLDASM/meshes/: arm_Link1.STL  arm_Link2.STL  arm_Link3.STL  arm_Link4.STL  arm_Link5.STL  base_link.STL  gripper_Link.STL
111.SLDASM/urdf/: 111.SLDASM.csv  111.SLDASM.urdf
arm.SLDASM/: CMakeLists.txt  package.xml
arm.SLDASM/config/: joint_names_arm.SLDASM.yaml
arm.SLDASM/launch/: display.launch  gazebo.launch
arm.SLDASM/meshes/: arm_Link4.STL  arm_Link5.STL  base_link.STL  end_Link2.STL  gripper_Link.STL
arm.SLDASM/urdf/: arm.SLDASM.csv  arm.SLDASM.urdf
robot_ws/: frames_2026-04-21_21.14.01.gv
robot_ws/src/alloy_chassis_mecanum/: CMakeLists.txt  README_NAV.md  README_SERIAL_ODOM.md  package.xml
robot_ws/src/alloy_chassis_mecanum/config/: display.rviz  ekf.yaml  map.yaml  nav2_params.yaml  navigate_through_poses_w_replanning_and_recovery.xml  navigation_with_robot.rviz  robot_description.yaml  slam_with_robot.rviz
robot_ws/src/alloy_chassis_mecanum/launch/: navigation_with_robot.launch.py  robot_integrated.launch.py  robot_state_publisher.launch.py  simple_display.launch.py  slam_with_robot.launch.py  slam_with_robot_model.launch.py  test_display.launch.py  test_lidar.launch.py  test_robot_display.launch.py  test_serial_odom.launch.py
robot_ws/src/alloy_chassis_mecanum/logs/: 2026-06-16_imu_fusion.log.md
robot_ws/src/alloy_chassis_mecanum/meshes/: base_link.STL  wheel1_Link.STL  wheel2_Link.STL  wheel3_Link.STL  wheel4_Link.STL
robot_ws/src/alloy_chassis_mecanum/scripts/: fake_odom_publisher.py  robot_desc_pub.py  serial_odom_receiver.py  test_urdf.py
robot_ws/src/alloy_chassis_mecanum/urdf/: alloy_chassis_mecanum.urdf  alloy_chassis_mecanum.xacro  robot_combined.urdf  robot_combined.urdf.xacro
robot_ws/src/arm_ros2/: CMakeLists.txt  README.md  package.xml
robot_ws/src/arm_ros2/config/: display.rviz
robot_ws/src/arm_ros2/launch/: display.launch.py  display.launch.py.bak  gazebo.launch.py
robot_ws/src/arm_ros2/meshes/: arm_Link1.STL  arm_Link2.STL  arm_Link3.STL  end_Link1.STL
robot_ws/src/arm_ros2/urdf/: arm.urdf
robot_ws/src/elite_test/: .setup_assistant  CMakeLists.txt  package.xml
robot_ws/src/elite_test/config/: arm.ros2_control.xacro  arm.srdf  arm.urdf.xacro  arm_combined.srdf  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml
robot_ws/src/elite_test/launch/: arm_full.launch.py  arm_vision_control.launch.py  demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  test_grasp.launch.py  warehouse_db.launch.py
robot_ws/src/elite_test/logs/: 2026-05-24_debug_log.md
robot_ws/src/elite_test/scripts/: arm_bridge.py  arm_fixed_grasp_test.py  arm_motion_planner.py  arm_reach_test.py
robot_ws/src/robot_brain/: CMakeLists.txt  package.xml
robot_ws/src/robot_brain/config/: api_config.yaml
robot_ws/src/robot_brain/launch/: brain_pipeline.launch.py  integrated_patrol.launch.py  orchard_patrol.launch.py  voice_commander.launch.py
robot_ws/src/robot_brain/logs/: 2026-06-16_hand_eye_calibration.log.md  2026-06-16_modular_architecture.log.md  2026-06-16_orchard_analysis.log.md  2026-06-16_voice_commander_impl.log.md
robot_ws/src/robot_brain/scripts/: auto_grasp.py  auto_grasp_full.py  brain_pipeline.py  camera_utils.py  cloud_uploader.py  detector.py  doubao_client.py  fruit_analyzer.py  grasper.py  hand_eye_calibrate.py  integrated_patrol.py  navigator.py  orchard_patrol.py  patrol.py  stereo_calibrate.py  stereo_detect.py  voice_chat.py  voice_commander.py  yolo_stereo_detect.py  yolo_test.py
